working on hero-banner-home

--- a/_includes/hero-banner-home.html
+++ b/_includes/hero-banner-home.html
@@ -1,6 +1,8 @@
-<section class="min-h-90" style="background-image: url('{{page.header.image_path}}');">
-    <img src="{{page.header.logo}}">
-    <h1>{{page.header.title}}</h1>
-    <h2>{{page.header.subtitle}}</h2>
-    <h2>{{page.header.subtitle-2}}</h2>
+<section class="p-10p min-h-[90vh] text-center" style="background-image: url('{{page.header.image_path}}');">
+    <div>
+        <img src="{{page.header.logo}}" alt="Mana Mei" class="h-[10rem]">
+        <h1>{{page.header.title}}</h1>
+        <h2>{{page.header.subtitle}}</h2>
+        <h2>{{page.header.subtitle-2}}</h2>
+    </div>
 </section>
