--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -546,6 +546,9 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 .h-\[3rem\] {
   height: 3rem;
 }
+.h-\[10rem\] {
+  height: 10rem;
+}
 .min-h-90 {
   min-height: 90vh;
 }
@@ -632,6 +635,9 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 .bg-\[url\(\'\{\{page\.who-its-for\.background_image\}\}\'\)\] {
   background-image: url('{{page.who-its-for.background_image}}');
 }
+.p-10p {
+  padding: 10%;
+}
 .px-\[5\%\] {
   padding-left: 5%;
   padding-right: 5%;
@@ -639,8 +645,14 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 .text-left {
   text-align: left;
 }
+.text-center {
+  text-align: center;
+}
 .font-serif {
   font-family: modernline, serif;
+}
+.text-\[10rem\] {
+  font-size: 10rem;
 }
 .italic {
   font-style: italic;
