--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -522,6 +522,14 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -578,6 +586,9 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 }
 .items-center {
   align-items: center;
+}
+.justify-center {
+  justify-content: center;
 }
 .justify-between {
   justify-content: space-between;
@@ -647,6 +658,9 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 }
 .text-center {
   text-align: center;
+}
+.align-middle {
+  vertical-align: middle;
 }
 .font-serif {
   font-family: modernline, serif;
