hero-banner-home

--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,5 +1,5 @@
 <header class="flex justify-between items-center px-[5%]">
-    <img src="/uploads/icons/manamei-11.png" alt="Mana Mei" class="m-4 h-[3rem]">
+    <img src="/uploads/icons/manamei-11.png" alt="Mana Mei">
     <nav>
         {% for item in site.data.site-settings.navigation %}
         <a href="{{item.url}}">{{item.title}}</a>
