--- a/_includes/about-ltm.html
+++ b/_includes/about-ltm.html
@@ -1,5 +1,5 @@
-<section class="bg-image-style" style="background-image: url('{{page.about-ltm.image_path}}');">
-    <h2>{{page.about-ltm.heading}}</h2>
+<section class="bg-image-style p-10p text-center bg-overlay" style="background-image: url('{{page.about-ltm.background_image}}');">
+    <h2 class="heading-lg-sans">{{page.about-ltm.heading}}</h2>
     <div>
         <p>{{page.about-ltm.description_html}}</p>
     </div>
