about-mana-home

--- a/_includes/about-home.html
+++ b/_includes/about-home.html
@@ -1,7 +1,7 @@
-<section class="bg-image-style" style="background-image: url('{{page.about-mana.image_path}}');">
-    <h2>{{page.about-mana.heading}}</h2>
+<section class="bg-image-style p-10p bg-overlay text-center" style="background-image: url('{{page.about-mana.background_image}}');">
+    <h2  class="text-md-serif text-feature">{{page.about-mana.heading}}</h2>
     <div>
         <p>{{page.about-mana.description_html}}</p>
     </div>
-    <a href="/about.html">{{page.about-mana.button}}</a>
+    <a href="/about.html" class="button">{{page.about-mana.button}}</a>
 </section>
