--- a/_includes/about-mana.html
+++ b/_includes/about-mana.html
@@ -1,4 +1,4 @@
-<section class="bg-image-style">
+<section>
     <h1>{{page.about-section.heading}}</h1>
     <div>
         <p>{{page.about-section.description_html}}</p>
