--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -513,6 +513,21 @@ section,
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+/* Buttons */
+.button {
+        text-transform: uppercase;
+        border: 1px solid white;
+        border-radius: 4rem;
+        padding: 0.5rem 2.5rem;
+        font-size: 1rem;
+        letter-spacing: 0.1em;
+    }
+.button:hover {
+        background-color: rgb(237, 213, 135, 0.5);
+        border: 1px solid rgb(237, 213, 135, 0.5);
+        color: white;
+        transition: 0.5s;
+    }
 /* Images */
 .bg-image-style {
   background-size: cover;
@@ -533,19 +548,19 @@ section,
     }
 .bg-overlay {
         position: relative;
-      }
+    }
 .bg-overlay::before {
-        content: ""; 
+        content: "";
         position: absolute;
         top: 0;
         left: 0;
         bottom: 0;
         right: 0;
-        background-color: rgba(0,0,0,0.7);
-      }
-.bg-overlay > * {
+        background-color: rgba(0, 0, 0, 0.7);
+    }
+.bg-overlay>* {
         position: relative;
-      }
+    }
 /* Video */
 .embed-container {
         position: relative;
