--- a/_includes/start-here.html
+++ b/_includes/start-here.html
@@ -1,17 +1,17 @@
-<section class="bg-image-style" style="background-image: url('{{page.start-here.image_path}}');">
-    <h2>Start Here</h2>
-    <h3>{{page.start-here.heading}}</h3>
+<section class="bg-image-style p-10p" style="background-image: url('{{page.start-here.background_image}}');">
+    <h2 class="text-md-serif text-feature mb-4">Start Here</h2>
+    <h3 class="heading-md-sans mb-4">{{page.start-here.heading}}</h3>
     <div>
         <p>{{page.start-here.description_html}}</p>
     </div>
     <div class="grid grid-cols-3">
         <div class="col-span-2">
-            <ul>
+            <ul class="mb-4">
                 {% for item in page.start-here.benefits %}
-                <li>{{page.start-here.benefits.benifit}}</li>
+                <li>{{item.benefit}}</li>
                 {% endfor %}
             </ul>
-            <a href="{{page.start-here.button.url}}">{{page.start-here.button.text}}</a>
+            <a href="{{page.start-here.button.url}}" class="button">{{page.start-here.button.text}}</a>
         </div>
         <div class=”youtube-container”>
             <div class='embed-container'>
