--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -557,7 +557,8 @@ section,
 .gallery-item {
         min-height: 50vh;
     }
-.bg-overlay {
+.bg-overlay,
+    .bg-overlay-light {
         position: relative;
     }
 .bg-overlay::before {
@@ -569,9 +570,25 @@ section,
         right: 0;
         background-color: rgba(0, 0, 0, 0.7);
     }
-.bg-overlay>* {
+.bg-overlay-light::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+    }
+.bg-overlay,
+    .bg-overlay-light>* {
         position: relative;
     }
+.icon {
+  margin-bottom: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 /* Video */
 .embed-container {
         position: relative;
@@ -588,6 +605,10 @@ section,
         left: 0;
         width: 100%;
         height: 100%;
+    }
+/* Slick Container */
+#slick-slide-control00 {
+        border-radius: 10px;
     }
 .col-span-2 {
   grid-column: span 2 / span 2;
@@ -630,6 +651,9 @@ section,
 }
 .list-item {
   display: list-item;
+}
+.h-12 {
+  height: 3rem;
 }
 .h-\[10rem\] {
   height: 10rem;
@@ -702,6 +726,9 @@ section,
 .bg-\[url\(\'\/uploads\/image-1\.jpg\'\)\] {
   background-image: url('/uploads/image-1.jpg');
 }
+.bg-\[url\(\'\/uploads\/images\/manamei-1\.jpg\'\)\] {
+  background-image: url('/uploads/images/manamei-1.jpg');
+}
 .bg-\[url\(\'\{\{item\.image_path\}\}\'\)\] {
   background-image: url('{{item.image_path}}');
 }
@@ -749,6 +776,9 @@ section,
 }
 .text-center {
   text-align: center;
+}
+.text-right {
+  text-align: right;
 }
 .align-middle {
   vertical-align: middle;
