--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,16 +1,16 @@
-<footer>
+<footer class="p-5p">
     <div class="grid grid-cols-3">
         <div>
-            <span>Mana Mei</span>
+            <span class="text-sm-serif block text-feature">Mana Mei</span>
             <h2>Offerings</h2>
             <nav>
                 {% for item in site.data.site-settings.navigation-footer %}
-                <a href="{{item.url}}">{{item.title}}</a>
+                <a href="{{item.url}}" class="block mb-2">{{item.title}}</a>
                 {% endfor %}
             </nav>
         </div>
         <div class="col-span-2">
-            <h2>Contact</h2>
+            <h2 class="text-right">Contact</h2>
             <form>
                 <div class="mb-4">
                     <input type="text" id="first-name" name="first-name" class="block border-b border-white w-full">
