--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -339,10 +339,14 @@ header nav a {
   text-transform: uppercase;
   letter-spacing: 0.05em;
 }
-header nav a:hover {
+header nav a:hover, footer nav a:hover {
         color: var(--featured);
         transition: 0.5s;
     }
+footer h2 {
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+}
 p {
   margin-bottom: 1rem;
 }
@@ -492,6 +496,7 @@ section,
 }
 /* Typography */
 .heading-lg-sans {
+  margin-bottom: 1rem;
   font-size: 3rem;
   line-height: 1;
   font-weight: 200;
@@ -499,6 +504,7 @@ section,
   line-height: 1.1em;
 }
 .heading-md-sans {
+  margin-bottom: 1rem;
   font-size: 1.875rem;
   line-height: 2.25rem;
   font-weight: 200;
@@ -506,6 +512,7 @@ section,
   line-height: 1.1em;
 }
 .text-lg-serif {
+  margin-bottom: 1rem;
   font-family: modernline, serif;
   font-size: 3rem;
   line-height: 1;
@@ -513,9 +520,18 @@ section,
   line-height: 1.8em;
 }
 .text-md-serif {
+  margin-bottom: 1rem;
   font-family: modernline, serif;
   font-size: 1.875rem;
   line-height: 2.25rem;
+  font-weight: 200;
+  line-height: 1.8em;
+}
+.text-sm-serif {
+  margin-bottom: 1rem;
+  font-family: modernline, serif;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
   font-weight: 200;
   line-height: 1.8em;
 }
@@ -616,6 +632,9 @@ section,
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
+}
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 .mb-4 {
   margin-bottom: 1rem;
@@ -745,6 +764,9 @@ section,
 .p-10p {
   padding: 10%;
 }
+.p-5p {
+  padding: 5%;
+}
 .px-20p {
   padding-left: 20%;
   padding-right: 20%;
@@ -771,6 +793,9 @@ section,
 }
 .font-serif {
   font-family: modernline, serif;
+}
+.uppercase {
+  text-transform: uppercase;
 }
 .italic {
   font-style: italic;
