--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,6 +1,6 @@
 <footer class="p-5p">
-    <div class="grid grid-cols-3 gap-4">
-        <div>
+    <div class="grid grid-cols-5 gap-4">
+        <div class="col-span-2">
             <span class="text-sm-serif block text-feature">Mana Mei</span>
             <h2>Offerings</h2>
             <nav>
@@ -9,17 +9,20 @@
                 {% endfor %}
             </nav>
         </div>
-        <div class="col-span-2">
+
+        <div class="col-span-3">
             <h2 class="text-right">Contact</h2>
             <form>
-                <div class="mb-4">
-                    <input type="text" id="first-name" name="first-name">
-                    <label for="first-name">First Name:</label>
-                </div>
+                <div class="grid grid-cols-2 gap-8 mb-4">
+                    <div>
+                        <input type="text" id="first-name" name="first-name">
+                        <label for="first-name">First Name:</label>
+                    </div>
 
-                <div class="mb-4">
-                    <input type="text" id="last-name" name="last-name">
-                    <label for="last-name">Last Name:</label>
+                    <div>
+                        <input type="text" id="last-name" name="last-name">
+                        <label for="last-name">Last Name:</label>
+                    </div>
                 </div>
 
                 <div class="mb-4">
@@ -38,9 +41,9 @@
             </form>
         </div>
     </div>
-    <div>
-        <a href="#">IG</a>
-        <a href="#">F</a>
-        <a href="#">YT</a>
+    <div class="flex justify-center">
+        <a href="https://www.instagram.com/manamei_movement/"><img src="/uploads/icons/manamei-9.png" class="social-icon"></a>
+        <a href="https://www.facebook.com/groups/liberationthroughmovement"><img src="/uploads/icons/manamei-4.png" class="social-icon"></a>
+        <a href="https://www.youtube.com/@ManaMei"><img src="/uploads/icons/manamei-22.png" class="social-icon"></a>
     </div>
 </footer>
