--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -42,8 +42,8 @@
         </div>
     </div>
     <div class="flex justify-center">
-        <a href="https://www.instagram.com/manamei_movement/"><img src="/uploads/icons/manamei-9.png" class="social-icon"></a>
-        <a href="https://www.facebook.com/groups/liberationthroughmovement"><img src="/uploads/icons/manamei-4.png" class="social-icon"></a>
-        <a href="https://www.youtube.com/@ManaMei"><img src="/uploads/icons/manamei-22.png" class="social-icon"></a>
+        <a href="https://www.instagram.com/manamei_movement/" target="_blank"><img src="/uploads/icons/manamei-9.png" class="social-icon"></a>
+        <a href="https://www.facebook.com/groups/liberationthroughmovement" target="_blank"><img src="/uploads/icons/manamei-4.png" class="social-icon"></a>
+        <a href="https://www.youtube.com/@ManaMei" target="_blank"><img src="/uploads/icons/manamei-22.png" class="social-icon"></a>
     </div>
 </footer>
