ebook form unfinished

--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -12,33 +12,7 @@
 
         <div class="col-span-3">
             <h2 class="text-right">Contact</h2>
-            <form>
-                <div class="grid grid-cols-2 gap-8 mb-4">
-                    <div>
-                        <input type="text" id="first-name" name="first-name">
-                        <label for="first-name">First Name:</label>
-                    </div>
-
-                    <div>
-                        <input type="text" id="last-name" name="last-name">
-                        <label for="last-name">Last Name:</label>
-                    </div>
-                </div>
-
-                <div class="mb-4">
-                    <input type="email" id="email" name="email">
-                    <label for="email">Email:</label>
-                </div>
-
-                <div>
-                    <textarea id="message" name="message" rows="4" placeholder="Message"
-                        class="border border-light"></textarea>
-                </div>
-
-                <div class="flex justify-end">
-                    <button type="submit" class="link mt-4">Send</button>
-                </div>
-            </form>
+            {% include form-contact.html %}
         </div>
     </div>
     <div class="flex justify-center">
