--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -739,6 +739,9 @@ ul {
 .w-full {
   width: 100%;
 }
+.w-\[80\%\] {
+  width: 80%;
+}
 .list-none {
   list-style-type: none;
 }
@@ -753,6 +756,12 @@ ul {
 }
 .grid-cols-9 {
   grid-template-columns: repeat(9, minmax(0, 1fr));
+}
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+.grid-cols-7 {
+  grid-template-columns: repeat(7, minmax(0, 1fr));
 }
 .items-center {
   align-items: center;
@@ -778,9 +787,6 @@ ul {
 .gap-8 {
   gap: 2rem;
 }
-.self-end {
-  align-self: flex-end;
-}
 .border {
   border-width: 1px;
 }
@@ -798,6 +804,9 @@ ul {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+.bg-transparent {
+  background-color: transparent;
 }
 .bg-\[url\(\'\'\)\] {
   background-image: url('');
