--- a/_includes/about-mana.html
+++ b/_includes/about-mana.html
@@ -1,6 +1,6 @@
-<section>
-    <h1>{{page.about-section.heading}}</h1>
-    <div>
+<section class="p-5p bg-image-style" style="background-image: url('{{page.about-section.background_image}}')">
+    <h1 class="text-lg-serif text-feature">{{page.about-section.heading}}</h1>
+    <div class="w-[80%]">
         <p>{{page.about-section.description_html}}</p>
     </div>
 </section>
