--- a/_includes/optin-ebook.html
+++ b/_includes/optin-ebook.html
@@ -1,23 +1,23 @@
 <section class="bg-image-style p-10p text-center" style="background-image: url('/uploads/backgrounds/manamei-2.jpg'); background-position: bottom;">
-    <h2 class="heading-lg-sans text-feature">Liberation Through Movement Free E-Book</h2>
+    <h2 class="heading-lg-sans text-feature">Liberation Through Movement<br>Free E-Book</h2>
     <h3 class="text-feature mb-4">A guide to transmuting stagnant energy into activated feminine power</h3>
     <p>A new experiential guide on how to reclaim freedom in the body, cultivate peace and wholeness, and show up in the
         world as a fully expressed woman.</p>
     <form>
         <div class="grid grid-cols-7 gap-2">
             <div class="col-span-2">
-                <input type="text" id="first-name" name="first-name" placeholder="First Name" class="bg-transparent border border-white w-full">
+                <input type="text" id="first-name" name="first-name" placeholder=" First Name" class="bg-transparent border border-white w-full">
             </div>
 
             <div class="col-span-2">
-                <input type="text" id="last-name" name="last-name" placeholder="Last Name" class="bg-transparent border border-white w-full">
+                <input type="text" id="last-name" name="last-name" placeholder=" Last Name" class="bg-transparent border border-white w-full">
             </div>
 
             <div class="col-span-2">
-                <input type="email" id="email" name="email" placeholder="Email" class="bg-transparent border border-white w-full">
+                <input type="email" id="email" name="email" placeholder=" Email" class="bg-transparent border border-white w-full">
             </div>
 
-            <button type="submit" class="button">Submit</button>
+            <button type="submit" class="button-form">Submit</button>
         </div>
     </form>
 </section>
