--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -362,12 +362,26 @@ footer form input, footer form textarea {
   background-color: transparent;
 }
 input::-moz-placeholder, textarea::-moz-placeholder {
+  font-family: Josefin Sans, sans-serif;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+input::placeholder, textarea::placeholder {
+  font-family: Josefin Sans, sans-serif;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+footer input::-moz-placeholder, textarea::-moz-placeholder {
   font-family: modernline, serif;
   text-transform: lowercase;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-input::placeholder, textarea::placeholder {
+footer input::placeholder, textarea::placeholder {
   font-family: modernline, serif;
   text-transform: lowercase;
   --tw-text-opacity: 1;
@@ -581,12 +595,20 @@ ul {
         font-size: 1rem;
         letter-spacing: 0.1em;
     }
-.button:hover {
+.button:hover, .button-form:hover {
         background-color: rgb(237, 213, 135, 0.5);
         border: 1px solid rgb(237, 213, 135, 0.5);
         color: white;
         transition: 0.5s;
     }
+.button-form {
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+  font-size: 1rem;
+  line-height: 1.5rem;
+  text-transform: uppercase;
+}
 .link {
   margin-bottom: 0.5rem;
   border-bottom-width: 1px;
@@ -736,11 +758,11 @@ ul {
 .w-\[10vh\] {
   width: 10vh;
 }
-.w-full {
-  width: 100%;
-}
 .w-\[80\%\] {
   width: 80%;
+}
+.w-full {
+  width: 100%;
 }
 .list-none {
   list-style-type: none;
@@ -754,14 +776,11 @@ ul {
 .grid-cols-5 {
   grid-template-columns: repeat(5, minmax(0, 1fr));
 }
-.grid-cols-9 {
-  grid-template-columns: repeat(9, minmax(0, 1fr));
-}
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
 .grid-cols-7 {
   grid-template-columns: repeat(7, minmax(0, 1fr));
+}
+.grid-cols-9 {
+  grid-template-columns: repeat(9, minmax(0, 1fr));
 }
 .items-center {
   align-items: center;
