uploaded images to gallery

--- a/_includes/gallery-mana.html
+++ b/_includes/gallery-mana.html
@@ -2,7 +2,7 @@
 
     {% for item in page.gallery %}
     <a href="{{item.image_path}}">
-        <div class="bg-image-style bg-[url('{{item.image_path}}')] gallery-item">image</div>
+        <div class="bg-image-style bg-[url('{{item.image_path}}')] gallery-item"></div>
     </a>
     {% endfor %}
 
