--- a/_includes/optin.html
+++ b/_includes/optin.html
@@ -3,22 +3,6 @@
     <h3 class="text-feature mb-4">{{page.cta.subtitle}}</h3>
     <p>{{page.cta.description}}</p>
     {% if page.type == e-book %}
-    <form>
-        <div class="grid grid-cols-7 gap-2">
-            <div class="col-span-2">
-                <input type="text" id="first-name" name="first-name" placeholder=" First Name" class="bg-transparent border border-white w-full">
-            </div>
-
-            <div class="col-span-2">
-                <input type="text" id="last-name" name="last-name" placeholder=" Last Name" class="bg-transparent border border-white w-full">
-            </div>
-
-            <div class="col-span-2">
-                <input type="email" id="email" name="email" placeholder=" Email" class="bg-transparent border border-white w-full">
-            </div>
-
-            <button type="submit" class="button-form">Submit</button>
-        </div>
-    </form>
+    {% include form-ebook.html %}
     {% endif %}
 </section>
