--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -650,8 +650,9 @@ ul {
 .landscape {
         padding-bottom: 66%;
     }
-.gallery-item {
-        min-height: 50vh;
+.gallery {
+        overflow-x: auto;
+        flex-wrap: nowrap;
     }
 .bg-overlay {
         position: relative;
@@ -749,8 +750,14 @@ ul {
 .h-\[10vh\] {
   height: 10vh;
 }
+.h-\[30vh\] {
+  height: 30vh;
+}
 .min-h-\[20vh\] {
   min-height: 20vh;
+}
+.min-h-\[50vh\] {
+  min-height: 50vh;
 }
 .min-h-\[90vh\] {
   min-height: 90vh;
@@ -830,11 +837,44 @@ ul {
 .bg-\[url\(\'\'\)\] {
   background-image: url('');
 }
-.bg-\[url\(\'\/uploads\/image-1\.jpg\'\)\] {
-  background-image: url('/uploads/image-1.jpg');
-}
 .bg-\[url\(\'\/uploads\/images\/manamei-1\.jpg\'\)\] {
   background-image: url('/uploads/images/manamei-1.jpg');
+}
+.bg-\[url\(\'\/uploads\/images\/manamei-26\.png\'\)\] {
+  background-image: url('/uploads/images/manamei-26.png');
+}
+.bg-\[url\(\'\/uploads\/images\/manamei-33\.jpg\'\)\] {
+  background-image: url('/uploads/images/manamei-33.jpg');
+}
+.bg-\[url\(\'\/uploads\/images\/manamei-34\.jpg\'\)\] {
+  background-image: url('/uploads/images/manamei-34.jpg');
+}
+.bg-\[url\(\'\/uploads\/images\/manamei-36\.jpg\'\)\] {
+  background-image: url('/uploads/images/manamei-36.jpg');
+}
+.bg-\[url\(\'\/uploads\/images\/manamei-37\.jpg\'\)\] {
+  background-image: url('/uploads/images/manamei-37.jpg');
+}
+.bg-\[url\(\'\/uploads\/images\/manamei-38\.jpg\'\)\] {
+  background-image: url('/uploads/images/manamei-38.jpg');
+}
+.bg-\[url\(\'\/uploads\/images\/manamei-40\.jpg\'\)\] {
+  background-image: url('/uploads/images/manamei-40.jpg');
+}
+.bg-\[url\(\'\/uploads\/images\/manamei-41\.jpg\'\)\] {
+  background-image: url('/uploads/images/manamei-41.jpg');
+}
+.bg-\[url\(\'\/uploads\/images\/manamei-42\.jpg\'\)\] {
+  background-image: url('/uploads/images/manamei-42.jpg');
+}
+.bg-\[url\(\'\/uploads\/images\/manamei-43\.jpg\'\)\] {
+  background-image: url('/uploads/images/manamei-43.jpg');
+}
+.bg-\[url\(\'\/uploads\/images\/manamei-45\.jpg\'\)\] {
+  background-image: url('/uploads/images/manamei-45.jpg');
+}
+.bg-\[url\(\'\/uploads\/images\/manamei-6\.jpg\'\)\] {
+  background-image: url('/uploads/images/manamei-6.jpg');
 }
 .bg-\[url\(\'\{\{item\.image_path\}\}\'\)\] {
   background-image: url('{{item.image_path}}');
@@ -859,51 +899,6 @@ ul {
 }
 .bg-\[url\(\'\{\{page\.who-its-for\.background_image\}\}\'\)\] {
   background-image: url('{{page.who-its-for.background_image}}');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-46\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-46.jpg');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-33\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-33.jpg');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-42\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-42.jpg');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-45\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-45.jpg');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-6\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-6.jpg');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-40\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-40.jpg');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-43\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-43.jpg');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-38\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-38.jpg');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-41\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-41.jpg');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-26\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-26.jpg');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-34\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-34.jpg');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-36\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-36.jpg');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-37\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-37.jpg');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-26\.png\'\)\] {
-  background-image: url('/uploads/images/manamei-26.png');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-34\.png\'\)\] {
-  background-image: url('/uploads/images/manamei-34.png');
 }
 .p-10 {
   padding: 2.5rem;
